src/styles.scss
// Sass main styles
// mixin reference - Hugo Giraudel https://css-tricks.com/snippets/sass/mixin-manage-breakpoints/

// Typeface
@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap");
$heebo: "Heebo", sans-serif;

// Font Weights
$regular-weight: 400;
$medium-weight: 500;
$semimedium-weight: 600;
$bold-weight: 700;

* {
  font-family: "Heebo", sans-serif;
  color: #4d4d4d;
}

$breakpoints: (
  "x-small": (
    max-width: 414px,
  ),
  "small": (
    max-width: 600px,
  ),
  "medium": (
    max-width: 800px,
  ),
  "large": (
    max-width: 1024px,
  ),
  "x-large": (
    max-width: 1440px,
  ),
  "xx-large": (
    max-width: 1880px,
  ),
  "xxx-large": (
    min-width: 1881px,
  ),
) !default;

@mixin respond-to($breakpoint) {
  // If the key exists in the map
  @if map-has-key($breakpoints, $breakpoint) {
    // Prints a media query based on the value
    @media #{inspect(map-get($breakpoints, $breakpoint))} {
      @content;
    }
  }
  // If the key doesn't exist in the map
  @else {
    @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
        + "Available breakpoints are: #{map-keys($breakpoints)}.";
  }
}

.short-term-spacer {
  height: 100px;
  @include respond-to("small") {
    display: none;
  }
}

.button-border {
  border-radius: 3px;
  // box-shadow: 0px 3px 5px grey;
  font-weight: $medium-weight;
  letter-spacing: 0.4px;
}

.button-height {
  height: 48px;
}

// PAGE SPECIFIC STYLES

// MAIN PAGE STYLING

h2 {
  padding-bottom: 0;
  color: #4d4d4d;
}

// .paragraph-text {
//   text-align: center;
//   padding-left: 20%;
//   padding-right: 20%;
//   padding-bottom: 50px;
// }

.spacer {
  height: 160px;
  @include respond-to("small") {
    display: none;
  }
}

// FORM STYLING

form {
  display: inline-block;
}

input {
  width: 100%;
  padding: 10px 20px;
  outline: none;
  transition: 0.3s;
  margin: 10px;
}

input:focus {
  border: 2px solid #303096;
}

button {
  background-color: #303096;
  color: white;
  font-size: 16px;
  padding: 12px 24px;
  border: none;
  cursor: pointer;
  border-radius: 3px;
  // box-shadow: 0px 3px 5px grey;
}

h5 {
  padding: 5px;
}

// MOBILE STYLING

.header-mobile {
  text-transform: uppercase;
  float: left;
  color: #e2e2e2;
}

.main-content-mobile {
  padding: 5%;
}

.mobile-section {
  margin-bottom: 3rem;
}

.description-text-mobile {
  margin-bottom: 0.5rem;
  line-height: 1.9rem;
  text-align: left;
  font-size: 16px;
  font-weight: $medium-weight;
  color: #e2e2e2;
}

.inline-form-2 {
  margin: auto;
  padding: 0px;
  width: 100%;
}

.subscribe-success {
  color: #e2e2e2;
}

.full-row {
  height: 100%;
}

